# fastapi_template

./: .env.template  Dockerfile  README.md  docker-compose.prod.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: tests.yaml
app/: main.py
tests/: test_main.py
