[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = ""
authors = ["Luciano Lorenzo <lucianoalorenzo1@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pytest = "^7.4.2"
httpx = "^0.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
